force-app/main/default/objects/Case/fields/Is_Email_To_Case__c.field-meta.xml
<CustomField>
    <fullName>Is_Email_To_Case__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Email To Case</label>
    <type>Checkbox</type>
</CustomField>