force-app/main/default/objects/Case/recordTypes/DKS_Email_Case.recordType-meta.xml
<RecordType>
    <fullName>DKS_Email_Case</fullName>
    <active>true</active>
    <businessProcess>VF CS</businessProcess>
    <label>DKS - Email Case</label>
</RecordType>