force-app/main/default/objects/Case/recordTypes/DKS_Live_Agent.recordType-meta.xml
<RecordType>
    <fullName>DKS_Live_Agent</fullName>
    <active>true</active>
    <businessProcess>VF CS</businessProcess>
    <label>DKS - Live Agent</label>
</RecordType>