force-app/main/default/objects/Case/recordTypes/DKS_Phone.recordType-meta.xml
<RecordType>
    <fullName>DKS_Phone</fullName>
    <active>true</active>
    <businessProcess>VF CS</businessProcess>
    <label>DKS - Phone</label>
</RecordType>