force-app/main/default/objects/Case/recordTypes/Email_Case.recordType-meta.xml
<RecordType>
    <fullName>Email_Case</fullName>
    <active>true</active>
    <businessProcess>VF CS</businessProcess>
    <label>Email Case</label>
</RecordType>