force-app/main/default/objects/Case/recordTypes/TBL_Phone.recordType-meta.xml
<RecordType>
    <fullName>TBL_Phone</fullName>
    <active>true</active>
    <businessProcess>VF CS</businessProcess>
    <label>TBL Phone</label>
</RecordType>