force-app/main/default/objects/Case/recordTypes/VNS_Email_Case.recordType-meta.xml
<RecordType>
    <fullName>VNS_Email_Case</fullName>
    <active>true</active>
    <businessProcess>VF CS</businessProcess>
    <label>VNS - Email Case</label>
</RecordType>