force-app/main/default/objects/Case/recordTypes/VNS_Live_Agent.recordType-meta.xml
<RecordType>
    <fullName>VNS_Live_Agent</fullName>
    <active>true</active>
    <businessProcess>VF CS</businessProcess>
    <label>VNS - Live Agent</label>
</RecordType>