force-app/main/default/objects/Case/recordTypes/VNS_Phone.recordType-meta.xml
<RecordType>
    <fullName>VNS_Phone</fullName>
    <active>true</active>
    <businessProcess>VF CS</businessProcess>
    <label>VNS - Phone</label>
</RecordType>