force-app/main/default/objects/Case/validationRules/Web_Email_Not_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Web_Email_Not_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(SuppliedEmail ),
        $Label.TECH_TBL_JP_EXTERNAL_SITE_ID = &apos;tbl-jp&apos;)</errorConditionFormula>
    <errorDisplayField>SuppliedEmail</errorDisplayField>
    <errorMessage>必須入力項目です</errorMessage>
</ValidationRule>