force-app/main/default/objects/Case/listViews/All_Open_Cases_For_DKS_Admin.listView-meta.xml
<ListView>
    <fullName>All_Open_Cases_For_DKS_Admin</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Last_Modified_By__c</columns>
    <columns>Last_Modified_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>External_Site_Id__c</field>
        <operation>equals</operation>
        <value>dks-jp</value>
    </filters>
    <label>All Open Cases For DKS Admin</label>
    <sharedTo>
        <role>Global</role>
    </sharedTo>
</ListView>