force-app/main/default/objects/Case/listViews/Dickies_Japan.listView-meta.xml
<ListView>
    <fullName>Dickies_Japan</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Last_Modified_Date__c</columns>
    <columns>Last_Modified_By__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>Dickies Japan</label>
    <queue>Dickies_Japan</queue>
    <sharedTo>
        <role>DKS_Japan_Team</role>
    </sharedTo>
</ListView>