force-app/main/default/objects/Case/listViews/Rakuten.listView-meta.xml
<ListView>
    <fullName>Rakuten</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>startsWith</operation>
        <value>[Rakuten]</value>
    </filters>
    <label>Rakuten</label>
</ListView>