force-app/main/default/objects/Case/listViews/SFCC.listView-meta.xml
<ListView>
    <fullName>SFCC</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Last_Modified_By__c</columns>
    <columns>Last_Modified_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>startsWith</operation>
        <value>[Timberland JP]</value>
    </filters>
    <label>SFCC</label>
</ListView>